--- a/ibsen.css
+++ b/ibsen.css
@@ -44,7 +44,7 @@ background-color: beige;
 
 .table{
     width: 30%;
-    margin-bottom: 15px;
+    margin-top: 15px;
     border-collapse: collapse;
 }
 
